[gd_scene load_steps=9 format=3 uid="uid://moih6kjuhyf4"]

[ext_resource type="Script" uid="uid://b8sg7722unv5r" path="res://game/scenes/menus/MainMenu.gd" id="1_main_menu"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_button_hover"]
bg_color = Color(0.28, 0.28, 0.28, 0.9)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.42, 0.42, 0.42, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_button_normal"]
bg_color = Color(0.18, 0.18, 0.18, 0.85)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.32, 0.32, 0.32, 0.8)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_button_pressed"]
bg_color = Color(0.12, 0.12, 0.12, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.28, 0.28, 0.28, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="Theme" id="Theme_professional"]
Button/colors/font_color = Color(0.9, 0.9, 0.9, 1)
Button/colors/font_disabled_color = Color(0.5, 0.5, 0.5, 0.6)
Button/colors/font_focus_color = Color(0.96, 0.96, 0.96, 1)
Button/colors/font_hover_color = Color(1, 1, 1, 1)
Button/colors/font_pressed_color = Color(0.82, 0.82, 0.82, 1)
Button/font_sizes/font_size = 20
Button/styles/focus = SubResource("StyleBoxFlat_button_hover")
Button/styles/hover = SubResource("StyleBoxFlat_button_hover")
Button/styles/normal = SubResource("StyleBoxFlat_button_normal")
Button/styles/pressed = SubResource("StyleBoxFlat_button_pressed")
Label/colors/font_color = Color(0.92, 0.92, 0.92, 1)
Label/colors/font_shadow_color = Color(0, 0, 0, 0.4)
Label/constants/shadow_offset_x = 1
Label/constants/shadow_offset_y = 1
Label/font_sizes/font_size = 20

[sub_resource type="Gradient" id="Gradient_background"]
offsets = PackedFloat32Array(0, 0.5, 1)
colors = PackedColorArray(0.05, 0.05, 0.05, 1, 0.08, 0.08, 0.08, 1, 0.12, 0.12, 0.12, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_background"]
gradient = SubResource("Gradient_background")
fill_to = Vector2(0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_background"]
bg_color = Color(0.12, 0.12, 0.12, 0.92)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.22, 0.22, 0.22, 0.6)
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_professional")
script = ExtResource("1_main_menu")
metadata/_edit_use_anchors_ = true

[node name="BackgroundLayer" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="BackgroundTexture" type="TextureRect" parent="BackgroundLayer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = SubResource("GradientTexture2D_background")
expand_mode = 1

[node name="MenuPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -320.0
offset_top = -280.0
offset_right = 320.0
offset_bottom = 280.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_background")

[node name="ContentContainer" type="VBoxContainer" parent="MenuPanel"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 24.0
offset_top = 24.0
offset_right = -24.0
offset_bottom = -24.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="HeaderSection" type="VBoxContainer" parent="MenuPanel/ContentContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 12

[node name="TopSpacer" type="Control" parent="MenuPanel/ContentContainer/HeaderSection"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2
size_flags_vertical = 3

[node name="TitleArea" type="CenterContainer" parent="MenuPanel/ContentContainer/HeaderSection"]
layout_mode = 2
size_flags_vertical = 8

[node name="TitleContainer" type="VBoxContainer" parent="MenuPanel/ContentContainer/HeaderSection/TitleArea"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="GameTitle" type="Label" parent="MenuPanel/ContentContainer/HeaderSection/TitleArea/TitleContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_type_variation = &"Title"
theme_override_colors/font_color = Color(0.95, 0.97, 1, 1)
text = "Test_Game"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SubtitleLabel" type="Label" parent="MenuPanel/ContentContainer/HeaderSection/TitleArea/TitleContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_type_variation = &"Subtitle"
theme_override_colors/font_color = Color(0.7, 0.75, 0.85, 1)
text = "Pre_alpha prueba MP"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MenuSection" type="CenterContainer" parent="MenuPanel/ContentContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="ButtonContainer" type="VBoxContainer" parent="MenuPanel/ContentContainer/MenuSection"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 18

[node name="StartButton" type="Button" parent="MenuPanel/ContentContainer/MenuSection/ButtonContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(280, 56)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
focus_neighbor_top = NodePath("../QuitButton")
focus_neighbor_bottom = NodePath("../MultiplayerButton")
focus_next = NodePath("../MultiplayerButton")
focus_previous = NodePath("../QuitButton")
text = "▶ START GAME"

[node name="MultiplayerButton" type="Button" parent="MenuPanel/ContentContainer/MenuSection/ButtonContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(280, 56)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
focus_neighbor_top = NodePath("../StartButton")
focus_neighbor_bottom = NodePath("../SettingsButton")
focus_next = NodePath("../SettingsButton")
focus_previous = NodePath("../StartButton")
text = "MULTIPLAYER"

[node name="SettingsButton" type="Button" parent="MenuPanel/ContentContainer/MenuSection/ButtonContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(280, 56)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
focus_neighbor_top = NodePath("../MultiplayerButton")
focus_neighbor_bottom = NodePath("../QuitButton")
focus_next = NodePath("../QuitButton")
focus_previous = NodePath("../MultiplayerButton")
text = "⚙ SETTINGS"

[node name="QuitButton" type="Button" parent="MenuPanel/ContentContainer/MenuSection/ButtonContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(280, 56)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
focus_neighbor_top = NodePath("../SettingsButton")
focus_neighbor_bottom = NodePath("../StartButton")
focus_next = NodePath("../StartButton")
focus_previous = NodePath("../SettingsButton")
text = "✕ QUIT GAME"

[node name="FooterSection" type="VBoxContainer" parent="MenuPanel/ContentContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 8

[node name="BottomSpacer" type="Control" parent="MenuPanel/ContentContainer/FooterSection"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2
size_flags_vertical = 3

[node name="InfoArea" type="CenterContainer" parent="MenuPanel/ContentContainer/FooterSection"]
layout_mode = 2
size_flags_vertical = 8

[node name="InfoContainer" type="VBoxContainer" parent="MenuPanel/ContentContainer/FooterSection/InfoArea"]
layout_mode = 2
theme_override_constants/separation = 4

[node name="VersionLabel" type="Label" parent="MenuPanel/ContentContainer/FooterSection/InfoArea/InfoContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_type_variation = &"Caption"
theme_override_colors/font_color = Color(0.6, 0.65, 0.75, 0.8)
text = "Version 0.0.1"
horizontal_alignment = 1

[node name="DeveloperLabel" type="Label" parent="MenuPanel/ContentContainer/FooterSection/InfoArea/InfoContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_type_variation = &"CaptionSmall"
theme_override_colors/font_color = Color(0.6, 0.65, 0.75, 0.8)
text = "Made by SSeb4z"
horizontal_alignment = 1

[connection signal="pressed" from="MenuPanel/ContentContainer/MenuSection/ButtonContainer/StartButton" to="." method="_on_start_button_activated"]
[connection signal="pressed" from="MenuPanel/ContentContainer/MenuSection/ButtonContainer/MultiplayerButton" to="." method="_on_lobby_button_activated"]
[connection signal="pressed" from="MenuPanel/ContentContainer/MenuSection/ButtonContainer/SettingsButton" to="." method="_on_settings_button_activated"]
[connection signal="pressed" from="MenuPanel/ContentContainer/MenuSection/ButtonContainer/QuitButton" to="." method="_on_quit_button_activated"]
